resubiendo subi por error otro

--- a/coder-detail.html
+++ b/coder-detail.html
@@ -3,8 +3,30 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Index</title>
-		<link rel="stylesheet" href="css/main.css">	</head>
+		<link rel="stylesheet" href="css/coder-detail.css">	</head>
 	<body>
-		
+		<div class="container">
+			<img class="per-foto" src="img/profile-1.png" alt="coder">
+			<div class="nombre">Nombre y Apellido</div>
+			<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ut possimus quas nemo aliquam tempora ratione debitis, laudantium quis, id, nihil ex earum libero minus et eos excepturi hic reprehenderit!</div>
+			<div class="habil">Habilidades
+				<div class="html">HTML</div>
+				<div class="css">CSS</div>
+				<div class="js">Javascript</div>
+			</div>
+			<div class="porta">Portafolio</div>
+			<div class="portafolio">
+				<div class="linea">
+					<img src="img/p5.jpg" alt="">
+					<img src="img/p6.jpg" alt="">
+					<img src="img/p8.jpg" alt="">
+				</div>
+				<div class="linea">
+					<img src="img/p5.jpg" alt="">
+					<img src="img/p6.jpg" alt="">
+					<img src="img/p8.jpg" alt="">
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
