--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 		<div class="encabezado titulo"><strong>Nuestras coders</strong></div>
 		<div class="encabezado salto"></div>
 		<div class="marco">
-			<div class="contenedor">
+			<a href="">
+				<div class="contenedor">
 				<img src="img/profile-1.png" alt="">
 				<div class="nombre">Nombre y Apellido</div>
+			</a>
 			</div>
 			<div class="contenedor">
 				<img src="img/profile-2.png" alt="">
